compiler/fir/resolve/testData/resolve/problems/invokeOfLambdaWithReceiver.kt
interface A

fun test(a: A, block: A.() -> Int) {
    a.<!UNRESOLVED_REFERENCE!>block<!>()
}